--- a/index.html
+++ b/index.html
@@ -125,84 +125,124 @@
                     <!-- Skills categories injected dynamically -->
                 </div>
             </div>
-        </section>
-
-        <!-- 4. Portfolio Section -->
-        <section id="portfolio" class="section portfolio">
-            <div class="container">
-                <div class="section-header reveal">
-                    <span class="section-subtitle" id="portfolio-subtitle"></span>
-                    <h2 class="section-title" id="portfolio-title"></h2>
-                </div>
-                <div class="portfolio-grid" id="portfolio-grid">
-                    <!-- Projects injected dynamically -->
-                </div>
-            </div>
-        </section>
-
-        <!-- 5. Contact Section -->
-        <section id="contact" class="section contact">
-            <div class="container">
-                <div class="section-header reveal">
-                    <span class="section-subtitle" id="contact-subtitle"></span>
-                    <h2 class="section-title" id="contact-title"></h2>
-                </div>
-                <div class="contact-wrapper reveal">
-                    <div class="contact-info" id="contact-info">
-                        <!-- Contact info injected dynamically -->
+            <!-- 4. Experience Section -->
+            <section id="experience" class="section experience">
+                <div class="container">
+                    <div class="section-header reveal">
+                        <span class="section-subtitle">My Journey</span>
+                        <h2 class="section-title">Work Experience</h2>
                     </div>
-                    <form class="contact-form" id="contact-form">
-                        <!-- Security Honey-pot -->
-                        <div style="display:none;">
-                            <input type="text" name="honey_pot" id="honey-pot">
-                        </div>
+                    <div class="experience-timeline" id="experience-timeline">
+                        <!-- Experience injected dynamically -->
+                    </div>
+                </div>
+            </section>
 
-                        <div class="form-group">
-                            <label class="floating-label">Name</label>
-                            <input type="text" id="contact-name" name="user_name" required placeholder="John Doe">
+            <!-- 5. Services Section -->
+            <section id="services" class="section services">
+                <div class="container">
+                    <div class="section-header reveal">
+                        <span class="section-subtitle">What I Do</span>
+                        <h2 class="section-title">My Services</h2>
+                    </div>
+                    <div class="services-grid" id="services-grid">
+                        <!-- Services injected dynamically -->
+                    </div>
+                </div>
+            </section>
+
+            <section id="portfolio" class="section portfolio">
+                <div class="container">
+                    <div class="section-header reveal">
+                        <span class="section-subtitle" id="portfolio-subtitle"></span>
+                        <h2 class="section-title" id="portfolio-title"></h2>
+                    </div>
+                    <div class="portfolio-grid" id="portfolio-grid">
+                        <!-- Projects injected dynamically -->
+                    </div>
+                </div>
+            </section>
+              <!-- Testimonials Section -->
+            <section id="testimonials" class="section testimonials">
+                <div class="container">
+                    <div class="section-header reveal">
+                        <span class="section-subtitle">Client Feedback</span>
+                        <h2 class="section-title">Testimonials</h2>
+                    </div>
+                    <div class="testimonials-marquee">
+                        <div class="marquee-row" id="testimonials-row-1">
+                            <!-- Row 1 injected dynamically -->
                         </div>
-                        <div class="form-group">
-                            <label class="floating-label">Email</label>
-                            <input type="email" id="contact-email" name="user_email" required
-                                placeholder="john@example.com">
+                        <div class="marquee-row" id="testimonials-row-2">
+                            <!-- Row 2 injected dynamically -->
                         </div>
-                        <div class="form-group">
-                            <label class="floating-label">Subject</label>
-                            <input type="text" id="contact-subject" name="subject" placeholder="Project Inquiry">
+                    </div>
+                </div>
+            </section>
+
+            <!-- 5. Contact Section -->
+            <section id="contact" class="section contact">
+                <div class="container">
+                    <div class="section-header reveal">
+                        <span class="section-subtitle" id="contact-subtitle"></span>
+                        <h2 class="section-title" id="contact-title"></h2>
+                    </div>
+                    <div class="contact-wrapper reveal">
+                        <div class="contact-info" id="contact-info">
+                            <!-- Contact info injected dynamically -->
                         </div>
-                        <div class="form-group">
-                            <label class="floating-label">Message</label>
-                            <textarea id="contact-message" name="message" rows="5" required
-                                placeholder="How can I help you?"></textarea>
-                        </div>
-                        <div id="contact-status" class="contact-status"></div>
-                        <button type="submit" class="btn btn-primary ripple" id="submit-btn">
-                            <i class="fa-solid fa-paper-plane"></i>
-                            <span>Send Message</span>
+                        <form class="contact-form" id="contact-form">
+                            <!-- Security Honey-pot -->
+                            <div style="display:none;">
+                                <input type="text" name="honey_pot" id="honey-pot">
+                            </div>
+
+                            <div class="form-group">
+                                <label class="floating-label">Name</label>
+                                <input type="text" id="contact-name" name="user_name" required placeholder="John Doe">
+                            </div>
+                            <div class="form-group">
+                                <label class="floating-label">Email</label>
+                                <input type="email" id="contact-email" name="user_email" required
+                                    placeholder="john@example.com">
+                            </div>
+                            <div class="form-group">
+                                <label class="floating-label">Subject</label>
+                                <input type="text" id="contact-subject" name="subject" placeholder="Project Inquiry">
+                            </div>
+                            <div class="form-group">
+                                <label class="floating-label">Message</label>
+                                <textarea id="contact-message" name="message" rows="5" required
+                                    placeholder="How can I help you?"></textarea>
+                            </div>
+                            <div id="contact-status" class="contact-status"></div>
+                            <button type="submit" class="btn btn-primary ripple" id="submit-btn">
+                                <i class="fa-solid fa-paper-plane"></i>
+                                <span>Send Message</span>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <div id="footer-big-logo" class="footer-big-logo"></div>
+                <div class="container footer-content">
+                    <div class="footer-social" id="footer-social">
+                        <!-- Social links injected dynamically -->
+                    </div>
+                    <p id="footer-text" class="footer-text"></p>
+                    <div class="footer-links">
+                        <a href="terms.html">Terms of Service</a>
+                        <span class="separator">•</span>
+                        <a href="privacy.html">Privacy Policy</a>
+                        <button id="theme-toggle" class="theme-toggle" aria-label="Toggle Theme">
+                            <i class="fa-solid fa-sun"></i>
                         </button>
-                    </form>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <div id="footer-big-logo" class="footer-big-logo"></div>
-            <div class="container footer-content">
-                <div class="footer-social" id="footer-social">
-                    <!-- Social links injected dynamically -->
-                </div>
-                <p id="footer-text" class="footer-text"></p>
-                <div class="footer-links">
-                    <a href="terms.html">Terms of Service</a>
-                    <span class="separator">•</span>
-                    <a href="privacy.html">Privacy Policy</a>
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle Theme">
-                        <i class="fa-solid fa-sun"></i>
-                    </button>
-                </div>
-            </div>
-        </footer>
+            </footer>
     </div>
 
     <!-- ==========================================================================
