--- a/index.html
+++ b/index.html
@@ -162,19 +162,21 @@
                     </div>
                 </div>
             </section>
-              <!-- Testimonials Section -->
+            <!-- Testimonials Section -->
             <section id="testimonials" class="section testimonials">
-                <div class="container">
-                    <div class="section-header reveal">
-                        <span class="section-subtitle">Client Feedback</span>
-                        <h2 class="section-title">Testimonials</h2>
-                    </div>
-                    <div class="testimonials-marquee">
-                        <div class="marquee-row" id="testimonials-row-1">
-                            <!-- Row 1 injected dynamically -->
+                <div class="sticky-inner">
+                    <div class="container">
+                        <div class="section-header reveal">
+                            <span class="section-subtitle">Client Feedback</span>
+                            <h2 class="section-title">Testimonials</h2>
                         </div>
-                        <div class="marquee-row" id="testimonials-row-2">
-                            <!-- Row 2 injected dynamically -->
+                        <div class="testimonials-marquee">
+                            <div class="marquee-row" id="testimonials-row-1">
+                                <!-- Row 1 injected dynamically -->
+                            </div>
+                            <div class="marquee-row" id="testimonials-row-2">
+                                <!-- Row 2 injected dynamically -->
+                            </div>
                         </div>
                     </div>
                 </div>
