style: Shorten loader page title and add background-clip and mask-image CSS properties.

--- a/loader.html
+++ b/loader.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Loader</title>
+    <title>Loader</title>
     <style>
         :root {
             --green: #008744;
